@@ -63,7 +63,8 @@ wearit()
 			return (firstnumber);
 
 		default:
-			printf("You can't wear%s%s!\n", (is_plural_object(value) ? " " : " a "), objsht[value]);
+			printf("You can't wear %s%s!\n",
+			    A_OR_AN_OR_BLANK(value), objsht[value]);
 			return (firstnumber);
 
 		case KNIFE:
@@ -91,9 +92,8 @@ wearit()
 				carrying -= objwt[value];
 				encumber -= objcumber[value];
 				ourtime++;
-				printf("You are now wearing %s %s.\n",
-				    (is_plural_object(value) ? "the"
-					: "a"), objsht[value]);
+				printf("You are now wearing %s%s.\n",
+				    A_OR_AN_OR_THE(value), objsht[value]);
 			} else
 				if (testbit(wear, value))
 					printf("You are already wearing the %s.\n",
@@ -199,7 +199,8 @@ murder()
 				    wordvalue[wordnumber] == EVERYTHING)
 					puts("You can't kill that!");
 				else
-					printf("You can't kill the %s!\n",
+					printf("You can't kill %s%s!\n",
+					    A_OR_AN_OR_BLANK(wordvalue[wordnumber]),
 					    objsht[wordvalue[wordnumber]]);
 				break;
 			}
